--- a/.github/workflows/run_tests_on_entropy.yml
+++ b/.github/workflows/run_tests_on_entropy.yml
@@ -6,13 +6,12 @@ on:
       - main
   workflow_dispatch:
 
-# Cancel previous runs when new commits are pushed
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  # First, discover all PR test configs
+  # 1) Discover configs
   discover-configs:
     runs-on: [self-hosted, entropy]
     outputs:
@@ -24,70 +23,80 @@ jobs:
       - name: Find PR test configs
         id: find-configs
         run: |
-          # Find all yaml files in configs/pr_tests/ and output as JSON array
           echo "Searching for configs in configs/pr_tests/..."
           ls -la configs/pr_tests/ || echo "Directory not found or empty"
 
           configs=$(ls configs/pr_tests/*.yaml 2>/dev/null | xargs -I {} basename {} .yaml | jq -R -s -c 'split("\n") | map(select(length > 0))')
-          echo "configs=$configs" >> $GITHUB_OUTPUT
+          echo "configs=$configs" >> "$GITHUB_OUTPUT"
 
           echo "=== Found PR test configs ==="
           echo "$configs" | jq -r '.[]'
           echo "Total: $(echo "$configs" | jq 'length') config(s)"
 
-  # Run each config as a separate job
-  run-pr-test:
+  # 2) Submit & manage one SLURM array for all configs
+  run-pr-tests:
     needs: discover-configs
     runs-on: [self-hosted, entropy]
-    strategy:
-      fail-fast: false
-      matrix:
-        config: ${{ fromJson(needs.discover-configs.outputs.configs) }}
+    env:
+      CONFIGS_JSON: ${{ needs.discover-configs.outputs.configs }}
+
     steps:
       - uses: actions/checkout@v4
-      # 1) Submit SLURM job and expose job_id
-      - name: Submit SLURM job - ${{ matrix.config }}
+
+      - name: Submit SLURM array
         id: submit
         run: |
-          echo "=== Submitting PR test for config: ${{ matrix.config }} ==="
-          chmod +x .github/scripts/run_remote_pr_check.sh
+          echo "Configs JSON: $CONFIGS_JSON"
 
-          # --parsable makes sbatch output just the job ID (or jobID;something)
+          # Write config names (one per line) into a file
+          configs_file="$PWD/pr_tests_configs.txt"
+          echo "$CONFIGS_JSON" | jq -r '.[]' > "$configs_file"
+
+          num_configs=$(wc -l < "$configs_file")
+          echo "Found $num_configs config(s)"
+
+          if [ "$num_configs" -eq 0 ]; then
+            echo "No PR test configs found, nothing to run."
+            # No job_id set -> later steps will do nothing
+            exit 0
+          fi
+
+          last_index=$((num_configs - 1))
+          echo "Submitting SLURM array 0-$last_index"
+
           job_output=$(sbatch \
             --parsable \
-            --job-name="pr_test_${{ matrix.config }}" \
-            --output="slurm-%j.out" \
-            --export=ALL,PR_TEST_CONFIG_NAME=${{ matrix.config }} \
+            --array=0-"$last_index" \
+            --job-name="pr_tests" \
+            --output="slurm-%A_%a.out" \
+            --export=ALL,PR_TEST_CONFIGS_FILE="$configs_file" \
             .github/scripts/run_remote_pr_check.sh)
 
-          # Usually it's either "12345" or "12345;stuff"
           job_id="${job_output%%;*}"
 
-          echo "Submitted job: $job_output"
+          echo "Submitted array job: $job_output"
           echo "Parsed job_id: $job_id"
 
-          # Expose as step output
           echo "job_id=$job_id" >> "$GITHUB_OUTPUT"
 
-      # 2) Wait for SLURM job to finish (polling)
-      - name: Wait for SLURM job
+      - name: Wait for SLURM array
+        if: steps.submit.outputs.job_id
         id: wait
         run: |
           job_id="${{ steps.submit.outputs.job_id }}"
-          echo "Waiting for job $job_id to finish..."
+          echo "Waiting for SLURM array job $job_id to finish..."
 
-          # Simple polling loop; you can tune sleep / commands as you like
           while true; do
             state=$(sacct -j "$job_id" --format=State --noheader | head -1 | awk '{print $1}')
-            echo "Current state: $state"
+            echo "Current array state: $state"
 
             case "$state" in
               COMPLETED)
-                echo "Job completed successfully."
+                echo "Array job completed successfully."
                 exit 0
                 ;;
               FAILED|CANCELLED|TIMEOUT)
-                echo "Job ended with state: $state"
+                echo "Array job ended with state: $state"
                 exit 1
                 ;;
               ""|PENDING|RUNNING|CONFIGURING|SUSPENDED)
@@ -100,22 +109,47 @@ jobs:
             esac
           done
 
-      # 3) Cancel SLURM job if workflow is cancelled
-      - name: Cancel SLURM job on workflow cancellation
-        if: cancelled() && steps.submit.outputs.job_id
+      - name: Summarize array results and show failed logs
+        if: always() && steps.submit.outputs.job_id
         run: |
           job_id="${{ steps.submit.outputs.job_id }}"
-          echo "Workflow cancelled, cancelling SLURM job $job_id"
-          scancel "$job_id" || echo "Failed to cancel SLURM job (may have already completed)"
+          configs_file="$PWD/pr_tests_configs.txt"
 
-      # 4) Always try to show SLURM output
-      - name: Display SLURM output
-        if: always()
-        run: |
-          latest_out=$(ls -t slurm-*.out 2>/dev/null | head -1)
-          if [ -n "$latest_out" ]; then
-            echo "=== SLURM Output for ${{ matrix.config }} ==="
-            cat "$latest_out"
+          if [ ! -f "$configs_file" ]; then
+            echo "No configs file found at $configs_file, nothing to summarize."
+            exit 0
+          fi
+
+          echo "=== Per-config SLURM task states ==="
+
+          i=0
+          failures=0
+          while read -r cfg; do
+            # SLURM child job id: <arrayJobId>_<taskIndex>
+            task_job="${job_id}_$i"
+
+            state=$(sacct -j "$task_job" --format=State --noheader | head -1 | awk '{print $1}')
+            echo "[$i] config=${cfg}  state=${state}"
+
+            if [ "$state" != "COMPLETED" ]; then
+              failures=$((failures + 1))
+              out_file="slurm-${job_id}_${i}.out"
+
+              echo "---- BEGIN log for FAILED config: ${cfg} (task ${i}) ----"
+              if [ -f "$out_file" ]; then
+                cat "$out_file"
+              else
+                echo "No slurm output file found (expected: ${out_file})"
+              fi
+              echo "---- END log for FAILED config: ${cfg} ----"
+            fi
+
+            i=$((i + 1))
+          done < "$configs_file"
+
+          if [ "$failures" -gt 0 ]; then
+            echo "Some configs failed: $failures failing task(s)."
+            exit 1
           else
-            echo "No slurm-*.out files found."
+            echo "All configs completed successfully."
           fi
